Bootstrap and regex

--- a/MorseCode_Encoder_Decoder/src/app/app.component.html
+++ b/MorseCode_Encoder_Decoder/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ul>
-  <li><a href="encoder">Encoder</a></li>
-  <li><a href="decoder">Decoder</a></li>
+  <li><a href="encoder" class="link-dark">Encoder</a></li>
+  <li><a href="decoder" class="link-dark">Decoder</a></li>
 </ul>
 <h1>Morsecode-Encoder/Decoder</h1>
 <router-outlet></router-outlet>
