--- a/MorseCode_Encoder_Decoder/src/app/decode/decode.component.html
+++ b/MorseCode_Encoder_Decoder/src/app/decode/decode.component.html
@@ -1,11 +1,13 @@
-<form>
-  <div>
-    <label> Text to Decode:
-      <input type="text" id="textToDecode" name="decode" [(ngModel)]="decoder.morseCodeToDecode"/>
-    </label>
-    <label> Decoded Text:
-      <input type="text" id="textToDecode" name="decode" readonly [value]="decoder.getValue()"/>
-    </label>
-  </div>
-  <button type="button" (click)="decoder.decodeMorseCode()" >Decode</button>
-</form>
+<div class="container">
+  <form>
+    <div>
+      <label> Text to Decode:
+        <input class="form-control mb-2" type="text" id="textToDecode" name="decode" [(ngModel)]="decoder.morseCodeToDecode" />
+      </label>
+      <label> Decoded Text:
+        <input class="form-control mb-2" type="text" id="textToDecode" name="decode" readonly [value]="decoder.getValue()"/>
+      </label>
+    </div>
+    <button class="btn btn-dark" type="button" (click)="decoder.decodeMorseCode()" [disabled]="!decoder.canDecode(decoder.morseCodeToDecode)">Decode</button>
+  </form>
+</div>
